fixed drop shadow on main blocks, fixed off canvas menu issue. Moving the 'role=main' div to under the header to make full page with caused the closing article to be insite the enclosing div and the footer was going full screen on mobile and the .exti-off-canvas to encompass the full screen not allowing you to click links in menu.

--- a/assets/scss/site/_elements.scss
+++ b/assets/scss/site/_elements.scss
@@ -1,23 +1,25 @@
-//main blocks
+//=====================================================================
+//==========================main blocks================================
+//=====================================================================
 .main-block{
     cursor:pointer;
   .inner-block{
     padding:1.5rem 1rem;
     background:scale-color(white, $lightness:-60%);
-    box-shadow: 0 3px 6px 0 hsla(0, 0%, 0%, 0.37);
-    transition: box-shadow 0.2s;
+    box-shadow: 0 0 5px 0 $steel;
+    color:$white;
+    transition: box-shadow 250ms;
     &:hover{
-        box-shadow: 0 4px 6px 0 hsla(0, 0%, 0%, 0.2),0 6px 10px 0 hsla(0, 0%, 0%, 0.5);
+        box-shadow: 0 0 5px 0 $oil, 0 5px 8px 0 $jumbo;
     }
     h3{
-        color:$white;
         margin:0;
+        color:$white-smoke;
         padding:1rem 0 .25rem 0;
         
     }
     p{
       padding:0 .25rem;
-      color:white;
       font-size:.95rem;
       line-height:1.45;
       margin:0;
@@ -34,7 +36,10 @@
   }
 }
 
-//appblocks
+
+//=====================================================================
+//===========================appblocks=================================
+//=====================================================================
 .appnote-block{
   padding:.5rem 0;
   overflow:hidden;
@@ -61,9 +66,9 @@
   }
 }
 
-//==============
-//video single
-//==============
+//=====================================================================
+//==========================video single===============================
+//=====================================================================
 .single-video{
   video{
     width:100%;
@@ -71,11 +76,12 @@
   }
 }
 
-//=================
-//prefooter
-//================
+//=====================================================================
+//==============================prefooter==============================
+//=====================================================================
 .row .prefooter-wrap{
     background:$smoke;
+    background:linear-gradient(to bottom, $silver 0%, $gainsboro 100%);
     border-top:5px solid $gainsboro;
     margin-top: rem-calc(65);
   .prefooter{
@@ -86,10 +92,14 @@
     max-height:10rem;
     overflow:hidden;
     cursor:pointer;
-    background:$smoke;
-    transition:background 250ms;
+    background:transparent;
+    transition:background 300ms;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    flex-direction:column;
     &:hover{
-      background:$vapor;
+      background:$silver;
     }
     p{
       margin:0;
@@ -111,9 +121,9 @@
   }
 }
 
-//==================
-//Part number block
-//==================
+//=====================================================================
+//=======================Part number block=============================
+//=====================================================================
 .partNumbers .row {
   background: $silver;
 }
